# trade-rogon

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml  railway.json  render.yaml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_market_structure.py  0003_liquidity.py  0004_displacement.py  0005_smt.py  0006_fvg.py  0007_execution_model.py  0008_trade_setups.py
backend/app/: config.py  deps.py  main.py
backend/app/concepts/: exceptions.py  registry.py  repository.py  router.py
backend/app/core/: event_bus.py  events.py  logging.py
backend/app/db/: session.py
backend/app/displacement/: detector.py  repository.py  router.py  service.py
backend/app/execution_model/: evaluator.py  repository.py  router.py  service.py
backend/app/feedback/: repository.py  router.py  snapshot.py
backend/app/fvg/: detector.py  repository.py  router.py  service.py
backend/app/liquidity/: detector.py  outcome_classifier.py  repository.py  router.py  service.py
backend/app/market_data/: aggregator.py  contract_roll.py  databento_provider.py  provider.py  repository.py  router.py  service.py
backend/app/market_structure/: detector.py  repository.py  router.py  service.py
backend/app/models/: __init__.py  annotation.py  base.py  concept.py  displacement.py  feedback.py  (+8 more)
backend/scripts/: _dateutil.py  ingest_historical.py  run_replay.py  seed_concepts.py
backend/tests/: conftest.py  test_annotations.py  test_concepts.py  test_displacement.py  test_execution_model.py  test_feedback_snapshot.py  test_fvg.py  test_liquidity.py  test_market_data.py  test_market_structure.py  test_narrative_pipeline.py  test_smt.py  test_trade_setup.py
(+84 files in other folders)
